# Microplastic-Segmentation-Research

./: .gitattributes  .gitignore  Dockerfile  Links.txt  README.md  microplastic_segmentation_model.keras  preprocessing.py  pyproject.toml  segment_microplastics.py
Data/Microplastics.v2-v2.coco-segmentation/: README.dataset.txt  README.roboflow.txt
Data/Microplastics.v2-v2.coco-segmentation/test/: _annotations.coco.json
data_prep/: convert_coco_to_yolo.py  prep_dataset.py
datasets/Microplastics-V2-NoOverlappingMasks/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/Microplastics-V3-ValidSplit/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/yolo_training_dataset/: dataset.yaml
inference/: convert_via_to_masks.py  debug.py  evaluate_test_set.py  inference.py  run_segmentation.sh  run_yolo.py  segment.sub  segment_microplastics.py  segment_sam2.py  sequential_inference.py  yolo_detection_only.py
inference/models/: yolo_hunter.pt
models/: README.md  documentation.md
models/oldTrainingScripts/: hunter-yolo-v0.3.0-training.py
sam2_training/: run_training.sh
sam2_training/sam2/sam2/: build_sam.py
src/: add_negatives_to_v3.py
src/microplastics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mira/: __init__.py  detector.py
tests/: playground.py  run_sequential.py  run_yolo-box.py  run_yolo-seg.py  run_yolo.py
training/: debug.sub  training.sub
training/sam2_training/: debug.sh  train_sam2.py
training/yolo_training/: train_yolo.py
yolo_training/: train_yolo.py
yolo_training/inference/: run_pipeline.py
(+84 files in other folders)
