[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microplastics"
version = "0.1.0"
description = "Microplastic Segmentation Framework using YOLO + SAM 2"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0",
    "torch>=2.4.0",
    "ultralytics>=8.3.0",
    "huggingface_hub>=0.20.0",
    "sam2>=1.1.0"
]

# only build the framework on PYPI using the code in src 
[tool.setuptools.packages.find]
where = ["src"]